@startuml machwave.models.propulsion.propellants
!pragma useIntermediatePackages false

class machwave.models.propulsion.propellants.biliquid.BiliquidPropellant {
  oxidizer_name: str
  fuel_name: str
  of_ratio: float
  combustion_efficiency: float
  combustion_temperature_ideal: None
  combustion_temperature: None
  chamber_density: None
  chamber_molecular_weight: None
  exit_molecular_weight: None
  chamber_gamma: None
  exit_gamma: None
  R_chamber: None
  R_exit: None
  cea_obj: None
}
class machwave.models.propulsion.propellants.base.Propellant {
}
class machwave.models.propulsion.propellants.solid.SolidPropellant {
  burn_rate: list[dict[str, float | int]]
  combustion_efficiency: float
  density: float
  k_mix: float
  k_ex: float
  T0_ideal: float
  M_ch: float
  M_ex: float
  Isp_frozen: float
  Isp_shifting: float
  qsi_ch: float
  qsi_ex: float
}
class machwave.models.propulsion.propellants.solid.BurnRateOutOfBoundsError {
  value: float
  message: None
}
machwave.models.propulsion.propellants.base.Propellant <|-- machwave.models.propulsion.propellants.biliquid.BiliquidPropellant
machwave.models.propulsion.propellants.base.Propellant <|-- machwave.models.propulsion.propellants.solid.SolidPropellant
footer Generated by //py2puml//
@enduml

